[package]
name = "incdir"
version = "1.0.0"
authors = ["Jan Trefil <8711792+htrefil@users.noreply.github.com>"]
edition = "2018"
description = "Compile-time including of directories."
license = "MIT"
repository = "https://github.com/htrefil/incdir"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0.12"
quote = "1.0.2"
