[package]
name = "tester"
version = "0.1.0"
authors = ["Jan Trefil <8711792+htrefil@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
incdir = { path = "../incdir" }
phf = { version = "0.8", features = ["macros"] }
